--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
 layout: default
 title: City of Bloomington
 ---
-# Welcome
+City-of-Bloomington.github.io
+=============================
+
+The City of Bloomington on Github
